Fixed sizing of form submitted cover, cleaned up form logic, and changed catcha to visible

--- a/app/contact/page.module.css
+++ b/app/contact/page.module.css
@@ -113,6 +113,7 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.20);
 	cursor: pointer;
 	margin: 1rem 0;
+	font-family: inherit;
 }
 
 .button:hover {
@@ -127,6 +128,18 @@
 	border: 5px solid #c0c0c0;
 	border-top: 5px solid #fff;
 	border-radius: 50%;
-	background-color: #4977bb;
+	background-color: #35598e;
 	margin-left: 1rem;
+}
+
+.overlayWrapper {
+	padding-block: 0.5rem;
+	padding-inline: 1rem;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	position: absolute;
+	background: #fff;
+	border-radius: 1rem;
 }
